--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "react": "https://esm.sh/react@^19.2.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.1/",
     "react/": "https://esm.sh/react@^19.2.1/",
-    "react": "https://esm.sh/react@^19.2.1",
-    "jspdf": "https://esm.sh/jspdf@2.5.1"
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
+    "jspdf": "https://esm.sh/jspdf@^3.0.4"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
